Opened way to upgrade to junit5, for the moment via junit-vintage.